--- a/templates/clinichome.html
+++ b/templates/clinichome.html
@@ -295,6 +295,10 @@ h2{
 
     }
 
+    .goog-te-gadget-simple{
+        padding:14px !important;
+
+    }
 </style>
 
 
@@ -303,6 +307,7 @@ h2{
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-white w3-card" id="myNavbar">
+
     <a href="#home" class="w3-bar-item w3-button w3-wide">VITALITY</a>
     <!-- Right-sided navbar links -->
     <div class="w3-right w3-hide-small">
@@ -310,7 +315,7 @@ h2{
       <a href="#yourcreations" class="w3-bar-item w3-button"><i class="fa fa-user"></i> YOUR CREATIONS</a>
       <a href="#services" class="w3-bar-item w3-button"><i class="fa fa-th"></i> SERVICES </a>
      <a href="#home" class="w3-bar-item w3-button"> LOGOUT </a>
-    </div>
+    </div>  <div id="google_translate_element"></div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
@@ -322,11 +327,10 @@ h2{
 <!-- Sidebar on small screens when clicking the menu icon -->
 <nav class="w3-sidebar w3-bar-block w3-black w3-card w3-animate-left w3-hide-medium w3-hide-large" style="display:none" id="mySidebar">
   <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large w3-padding-16">Close ×</a>
-  <a href="#about" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT</a>
-  <a href="#team" onclick="w3_close()" class="w3-bar-item w3-button">TEAM</a>
-  <a href="#work" onclick="w3_close()" class="w3-bar-item w3-button">WORK</a>
-  <a href="#pricing" onclick="w3_close()" class="w3-bar-item w3-button">PRICING</a>
-  <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
+  <a href="#yourcreations" onclick="w3_close()" class="w3-bar-item w3-button">YOUR CREATIONS</a>
+  <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button">SERVICES</a>
+  <a href="/logout" onclick="w3_close()" class="w3-bar-item w3-button">LOGOUT</a>
+
 </nav>
 
 
@@ -602,6 +606,15 @@ var myChart = new Chart(ctx, {
     }
 });
 </script>
+
+
+    		 <script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en', layout:
+        google.translate.TranslateElement.InlineLayout.SIMPLE},
+            'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 
  {% endblock %}
 
