--- a/templates/clinicinfo.html
+++ b/templates/clinicinfo.html
@@ -100,6 +100,21 @@ i.material-icons{
 .w3-white{
     padding:8px;
 }
+
+
+.goog-te-gadget{
+    height:28px !important;
+}
+
+.goog-te-gadget-simple{
+
+    height:39px;
+}
+
+.goog-te-gadget-simple .goog-te-menu-value span{
+    font-size:24px;
+    vertical-align:top;
+}
 </style>
 
 <div class="row">
