--- a/templates/createdisease.html
+++ b/templates/createdisease.html
@@ -136,6 +136,11 @@ a.w3-button.w3-light-grey{
      background-color:ghostwhite !important;
  }
 
+ .goog-te-gadget-simple{
+
+    padding:16px !important;
+    }
+
  </style>
 
     {% from "includes/_formhelper.html" import render_field %}
