--- a/templates/create_motd.html
+++ b/templates/create_motd.html
@@ -1,4 +1,31 @@
-{% extends 'motdframe.html' %}
+<style>
+
+    .w3-white{
+        padding:8px;
+    }
+
+    h1{
+        padding-top:66px;
+    }
+    footer.w3-center.w3-black.w3-padding-64{
+        color:transparent !important;
+        background-color:transparent !important;
+    }
+
+    a.w3-button.w3-light-grey{
+        color:transparent !important;
+        background-color:transparent !important;
+
+    }
+
+    a.w3-hover-text-green{
+        color:transparent !important;
+        background-color:transparent !important;
+
+    }
+</style>
+
+{% extends 'layoutadmin.html' %}
 
 {% block body %}
     {% from "includes/_formhelper.html" import render_field %}
@@ -24,12 +51,11 @@
         </div>
 
 
-            <div class="form-group">
+        <div class="form-group">
+            {{ render_field(form.description, class_="form-control") }}
 
-                {{ render_field(form.description, class_="form-control") }}
 
-
-            </div>
+        </div>
         <div class="form-group col-md-1">
             <input type="submit" value="Submit" class="btn btn-info"/></div>
 
