--- a/templates/createclinic.html
+++ b/templates/createclinic.html
@@ -134,7 +134,9 @@ a.w3-button.w3-light-grey{
      background-color:ghostwhite !important;
  }
 
-
+.goog-te-gadget-simple{
+     padding:14px;
+    }
  </style>
 
     {% from "includes/_formhelper.html" import render_field %}
