--- a/templates/diseaseinfo.html
+++ b/templates/diseaseinfo.html
@@ -152,7 +152,11 @@ ul.imagelist {
     padding:8px;
 }
 a{
-    color:blue;
+    color:dodgerblue;
+}
+
+.goog-te-gadget{
+    margin-top:8px;
 }
 </style>
 
