--- a/templates/searchclinic.html
+++ b/templates/searchclinic.html
@@ -321,6 +321,12 @@ a.w3-bar-item.w3-button{
     margin-top:0px !important;
 }
 
+.goog-te-gadget{
+            margin-top:6px;
+        }
+.goog-te-gadget-simple .goog-te-menu-value{
+    font-size:19px;
+}
 </style>
 
 
