--- a/templates/searchclinics.html
+++ b/templates/searchclinics.html
@@ -191,6 +191,13 @@ a.w3-bar-item.w3-button{
         .infocolor{
             color:mediumblue;
         }
+
+        .goog-te-gadget-simple .goog-te-menu-value{
+        font-size:25px;
+    }
+        .goog-te-gadget{
+            margin-top:6px;
+        }
         </style>
 
 
