--- a/templates/update_disease.html
+++ b/templates/update_disease.html
@@ -124,7 +124,10 @@ background: #12e09f;
  .w3-white{
      padding:8px;
  }
-
+.goog-te-gadget-simple{
+    margin-top:4px;
+    font-size:18px;
+}
  </style>
 
     {% from "includes/_formhelper.html" import render_field %}
