--- a/templates/viewclinic.html
+++ b/templates/viewclinic.html
@@ -128,6 +128,7 @@ img {
 
     .w3-white, .w3-hover-white:hover{
         margin-bottom:40px;
+        
     }
 
 #addclinic{
@@ -179,6 +180,23 @@ img {
         color:dodgerblue;
         background-color:white;
     }
+
+    .goog-te-gadget-simple{
+        margin-right:888px;
+        font-size:22px !important;
+        height:36px;
+        width:240px;
+
+
+    }
+.goog-te-gadget{
+    margin-top:14px;
+}
+
+
+  a{
+      display:inline;
+  }
 </style>
 
 {% extends 'layoutadmin.html' %}
