--- a/templates/viewdisease.html
+++ b/templates/viewdisease.html
@@ -90,7 +90,14 @@ body{
     background-color:white;
     color:red
 }
-
+.goog-te-gadget-simple {
+    margin-top:9px;
+}
+     .goog-te-gadget-simple {
+         margin-right: 888px;
+         font-size: 22px !important;
+         height: 36px;
+     }
 </style>
 
 {% extends 'layoutadmin.html' %}
