--- a/templates/clinichome.html
+++ b/templates/clinichome.html
@@ -33,6 +33,8 @@ body, html {
 }
 .w3-bar .w3-button {
     padding: 16px;
+    font-weight:bold;
+    font-size:18px;
 }
 
 
@@ -296,7 +298,8 @@ h2{
     }
 
     .goog-te-gadget-simple{
-        padding:14px !important;
+        margin-top:12px;
+        font-size:18px !important;
 
     }
 </style>
