--- a/templates/createdisease.html
+++ b/templates/createdisease.html
@@ -137,10 +137,9 @@ a.w3-button.w3-light-grey{
  }
 
  .goog-te-gadget-simple{
-
-    padding:16px !important;
-    }
-
+    margin-top:12px;
+    font-size:18px;
+}
  </style>
 
     {% from "includes/_formhelper.html" import render_field %}
