--- a/templates/update_clinic.html
+++ b/templates/update_clinic.html
@@ -122,6 +122,12 @@ a.w3-button.w3-light-grey{
  .w3-white{
      padding:8px;
  }
+
+ .goog-te-gadget-simple{
+    margin-top:4px;
+    font-size:18px;
+}
+
  </style>
 
     {% from "includes/_formhelper.html" import render_field %}
