--- a/templates/update_motd.html
+++ b/templates/update_motd.html
@@ -1,4 +1,34 @@
-{% extends 'motdframe.html' %}
+<style>
+
+ a.w3-button.w3-light-grey{
+    color:transparent !important;
+    background-color:transparent !important;
+}
+
+ a.w3-hover-text-green,a.w3-hover-text-green:hover{
+     color:transparent !important;
+    background-color:transparent !important;
+ }
+ .w3-section{
+     color:transparent !important;
+     background-color:transparent !important;
+ }
+
+ #poweredby{
+     color:transparent !important;
+     background-color: transparent !important;
+ }
+
+     footer.w3-center.w3-black.w3-padding-64{
+     background-color:white!important;
+ }
+
+h1{
+    margin-top:66px !important;
+}
+</style>
+
+{% extends 'layoutadmin.html' %}
 
 {% block body %}
     {% from "includes/_formhelper.html" import render_field %}
@@ -16,19 +46,13 @@
             {{ render_field(form.title, class_="form-control") }}
         </div>
         <div class="form-group">
-            <div class="form-row">
-                <div class="form-group col-md-4">
-                    {{ render_field(form.category, class_="form-control") }}
-                </div>
-                <div class="form-group col-md-4">
-                    {{ render_field(form.publisher, class_="form-control") }}
-                </div>
-                <div class="form-group col-md-4">
-                    {{ render_field(form.status, class_="form-control") }}
-                </div>
 
-            </div>
+                {{ render_field(form.description, class_="form-control") }}
         </div>
 
+        <div class="form-group col-md-1">
+            <input type="submit" value="Submit" class="btn btn-info"/></div>
+
     </form>
+
 {% endblock %}
