--- a/templates/clinicinfo.html
+++ b/templates/clinicinfo.html
@@ -115,6 +115,10 @@ i.material-icons{
     font-size:24px;
     vertical-align:top;
 }
+
+.w3-bar .w3-button{
+    font-weight:bold;
+}
 </style>
 
 <div class="row">
