--- a/templates/includes/_navbar2.html
+++ b/templates/includes/_navbar2.html
@@ -1,3 +1,9 @@
+<style>
+    .goog-te-gadget-simple .goog-te-menu-value{
+        font-size:19px;
+    }
+</style>
+
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -13,6 +19,8 @@
       <a href="logout" class="w3-bar-item w3-button"><i class="fa fa-user"></i> Logout</a>
 
     </div>
+      <div id="google_translate_element"></div>
+
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
@@ -20,7 +28,7 @@
     </a>
   </div>
 </div>
-		 <div id="google_translate_element"></div><script type="text/javascript">
+		 <script type="text/javascript">
     function googleTranslateElementInit() {
         new google.translate.TranslateElement({pageLanguage: 'en', layout:
         google.translate.TranslateElement.InlineLayout.SIMPLE},
