--- a/templates/includes/_navbaradmin.html
+++ b/templates/includes/_navbaradmin.html
@@ -12,6 +12,8 @@
       <a href="/clinichome#yourcreations" class="w3-bar-item w3-button"><i class="fa fa-user"></i> YOUR CREATIONS </a>
       <a href="/clinichome#services" class="w3-bar-item w3-button"><i class="fa fa-th"></i> SERVICES </a>
         <a href="/logout" class="w3-bar-item w3-button"> LOGOUT </a>
+         </div>  <div id="google_translate_element"></div>
+
 
     </div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
@@ -21,3 +23,11 @@
     </a>
   </div>
 </div>
+
+ <script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en', layout:
+        google.translate.TranslateElement.InlineLayout.SIMPLE},
+            'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
