--- a/templates/includes/_navbaryr.html
+++ b/templates/includes/_navbaryr.html
@@ -14,7 +14,7 @@
       <a href="searchclinic" class="w3-bar-item w3-button"><i class="fa fa-search"></i> Find A Clinic</a>
       <a href="logout" class="w3-bar-item w3-button"><i class="fa fa-user"></i> Logout</a>
 
-    </div>
+    </div><div id="google_translate_element"></div>
     <!-- Hide right-floated links on small screens and replace them with a menu icon -->
 
     <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
@@ -22,3 +22,12 @@
     </a>
   </div>
 </div>
+
+</div>
+		 <script type="text/javascript">
+    function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en', layout:
+        google.translate.TranslateElement.InlineLayout.SIMPLE},
+            'google_translate_element');
+    }
+    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
