--- a/templates/searchclinic.html
+++ b/templates/searchclinic.html
@@ -332,7 +332,7 @@ a.w3-bar-item.w3-button{
 
 
 
-<div class="bgimg">
+<div class="bgimg" id="bgimg1">
 
   <div class="middle">
     <h1 id="overviewline" class="design1"> SEARCH FOR CLINIC </h1>
