--- a/templates/includes/_navbaryr.html
+++ b/templates/includes/_navbaryr.html
@@ -11,7 +11,7 @@
 
      <a href="/" class="w3-bar-item w3-button">HOME</a>
       <a href="/#features6-k" class="w3-bar-item w3-button">ABOUT</a>
-      <a href="searchclinic" class="w3-bar-item w3-button"><i class="fa fa-search"></i> Find A Clinic</a>
+      <a href="/searchclinic#bgimg1" class="w3-bar-item w3-button"><i class="fa fa-search"></i> Find A Clinic</a>
       <a href="logout" class="w3-bar-item w3-button"><i class="fa fa-user"></i> Logout</a>
 
     </div><div id="google_translate_element"></div>
